# twitter-rust-practice

./: .env.sample  Cargo.toml  README.md  diesel.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: index.html
migrations/2025-04-19-072055_create_users_and_posts/: down.sql  up.sql
migrations/2025-04-19-082844_add_password_to_users/: down.sql  up.sql
src/: main.rs  schema.rs
src/config/: db.rs
src/controllers/: auth_controller.rs  mod.rs  post_controller.rs  tweet_controller.rs
src/middlewares/: auth.rs  auth_middleware.rs  mod.rs
src/models/: mod.rs  post.rs  user.rs
src/util/: api_doc.rs  auth.rs  db.rs  mod.rs
