[package]
name = "twitter-rust-practice"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
r2d2 = "0.8"
bcrypt = "0.17.0"
futures-util = "0.3.31"
jwt-simple = "0.12.12"
